<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/default_user"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:key="@string/key_user"
        android:title="@string/label_user" />

    <EditTextPreference
        android:defaultValue="@string/default_password"
        android:dialogLayout="@layout/preference_edit_text_password"
        android:icon="@drawable/ic_vpn_key_black_24dp"
        android:inputType="textPassword"
        android:key="@string/key_password"
        android:title="@string/label_password" />

    <EditTextPreference
        android:defaultValue="@string/default_device_name"
        android:icon="@drawable/ic_title_black_24dp"
        android:key="@string/key_device_name"
        android:title="@string/label_device_name" />

    <EditTextPreference
        android:defaultValue="@string/default_device_id"
        android:icon="@drawable/ic_wifi_black_24dp"
        android:key="@string/key_device_id"
        android:title="@string/label_device_id" />

    <EditTextPreference
        android:defaultValue="@string/default_device_time_zone"
        android:icon="@drawable/ic_place_black_24dp"
        android:key="@string/key_device_time_zone"
        android:title="@string/label_device_time_zone" />

    <EditTextPreference
        android:defaultValue="@string/default_login_url"
        android:icon="@drawable/ic_cloud_download_black_24dp"
        android:key="@string/key_login_url"
        android:title="@string/label_login_url" />

    <EditTextPreference
        android:defaultValue="@string/default_last_error"
        android:dialogLayout="@layout/preference_edit_text_status"
        android:icon="@drawable/ic_error_black_24dp"
        android:key="@string/key_last_error"
        android:title="@string/label_last_error" />

</PreferenceScreen>